// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signal CRUD (operations) Given an unknown error occurs on the server should return a 500 when trying to create the Signal 1`] = `
{
  "message": "Server did a boo boo",
  "ok": false,
}
`;

exports[`Signal CRUD (operations) Given the Signal does not exist should create the Signal 1`] = `
{
  "data": {
    "actions": [],
    "alarmId": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
    "banktransactieIds": [],
    "bedragDifference": "100",
    "context": {
      "is": true,
      "something": "else",
    },
    "id": "02c49b0b-def0-46b2-ae03-9b90430adb94",
    "isActive": true,
    "timeUpdated": "2022-05-16T13:00:00.000Z",
    "type": "default",
  },
  "ok": true,
}
`;

exports[`Signal CRUD (operations) Given the Signal exists should return Signals filtered by id (through request body) 1`] = `
{
  "data": [
    {
      "actions": [],
      "alarmId": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
      "banktransactieIds": [],
      "bedragDifference": "100",
      "context": {
        "is": true,
        "something": "else",
      },
      "id": "02c49b0b-def0-46b2-ae03-9b90430adb94",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
    {
      "actions": [],
      "alarmId": "5d65d8e9-1f4a-4cb9-a89c-0f952ac5f2ff",
      "banktransactieIds": [],
      "bedragDifference": null,
      "context": {
        "is": false,
        "something": "else",
      },
      "id": "bef7c096-40b6-4158-b0a5-5b6b813080be",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
  ],
  "ok": true,
}
`;

exports[`Signal CRUD (operations) Given the Signal exists should return Signals filtered by id (through request query params) 1`] = `
{
  "data": [
    {
      "actions": [],
      "alarmId": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
      "banktransactieIds": [],
      "bedragDifference": "100",
      "context": {
        "is": true,
        "something": "else",
      },
      "id": "02c49b0b-def0-46b2-ae03-9b90430adb94",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
    {
      "actions": [],
      "alarmId": "5d65d8e9-1f4a-4cb9-a89c-0f952ac5f2ff",
      "banktransactieIds": [],
      "bedragDifference": null,
      "context": {
        "is": false,
        "something": "else",
      },
      "id": "bef7c096-40b6-4158-b0a5-5b6b813080be",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
  ],
  "ok": true,
}
`;

exports[`Signal CRUD (operations) Given the Signal exists should return all Signals 1`] = `
{
  "data": [
    {
      "actions": [],
      "alarmId": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
      "banktransactieIds": [],
      "bedragDifference": "100",
      "context": {
        "is": true,
        "something": "else",
      },
      "id": "02c49b0b-def0-46b2-ae03-9b90430adb94",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
    {
      "actions": [],
      "alarmId": "5d65d8e9-1f4a-4cb9-a89c-0f952ac5f2ff",
      "banktransactieIds": [],
      "bedragDifference": null,
      "context": {
        "is": false,
        "something": "else",
      },
      "id": "bef7c096-40b6-4158-b0a5-5b6b813080be",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
    {
      "actions": [],
      "alarmId": "1a8ac60f-081f-4bbb-baca-6b6d399ce8db",
      "banktransactieIds": [],
      "bedragDifference": null,
      "context": {
        "isAdmin": true,
        "user": {
          "name": "Koen Brouwer",
        },
      },
      "id": "09c1af54-1054-4a6c-aecd-875fab4ce889",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
    {
      "actions": [],
      "alarmId": "738247bc-e6b8-41ee-a09e-a6778822598d",
      "banktransactieIds": [],
      "bedragDifference": null,
      "context": {
        "is": true,
        "something": "else",
      },
      "id": "cd605096-7336-4eb6-b1a7-bc6e1d57e492",
      "isActive": true,
      "timeUpdated": "2022-05-16T13:00:00.000Z",
      "type": "default",
    },
  ],
  "ok": true,
}
`;

exports[`Signal CRUD (operations) Given the Signal exists should return the Signal 1`] = `
{
  "data": {
    "actions": [],
    "alarmId": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
    "banktransactieIds": [],
    "bedragDifference": "100",
    "context": {
      "is": true,
      "something": "else",
    },
    "id": "02c49b0b-def0-46b2-ae03-9b90430adb94",
    "isActive": true,
    "timeUpdated": "2022-05-16T13:00:00.000Z",
    "type": "default",
  },
  "ok": true,
}
`;

exports[`Signal CRUD (operations) Given the Signal exists should update the Signal 1`] = `
{
  "data": {
    "actions": [],
    "alarmId": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
    "alarmUuid": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
    "banktransactieIds": [],
    "banktransactieUuids": [],
    "bedragDifference": "300",
    "context": {
      "is": true,
      "something": "else",
    },
    "id": "02c49b0b-def0-46b2-ae03-9b90430adb94",
    "isActive": true,
    "timeUpdated": "2022-05-16T13:00:00.000Z",
    "type": "default",
  },
  "ok": true,
}
`;
